# maily

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish-cli.yml  test.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: args.rs  config.rs  main.rs
src/: config.rs  lib.rs  main.rs  pgp.rs  rand.rs  util.rs
