[workspace]
members = [
  ".",
  "cli",
]

[package]
name = "maily"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/mail-message"
repository = "https://github.com/d-e-s-o/mail-message.git"
readme = "README.md"
categories = [
  "asynchronous",
  "command-line-utilities",
  "email",
]
keywords = [
  "async",
  "cli",
  "email",
  "smtp",
  "text",
]
description = """
A program for easy, quick, and fault tolerant sending of emails from the
command line.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable this feature to enable support for PGP encryption.
pgp = ["dep:sequoia-cert-store", "dep:sequoia-openpgp"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
sequoia-cert-store = { version = "0.5", default-features = false, optional = true }
sequoia-openpgp = { version = "1.18", default-features = false, features = ["crypto-nettle"], optional = true }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["pgp"]
# Defines the configuration attribute `docsrs`.
rustdoc-args = ["--cfg", "docsrs"]
