[workspace]
members = [
  ".",
  "cli",
]

[package]
name = "maily"
version = "0.2.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/maily"
repository = "https://github.com/d-e-s-o/maily.git"
readme = "README.md"
categories = [
  "asynchronous",
  "email",
]
keywords = [
  "async",
  "email",
  "smtp",
  "text",
]
description = """
A library for easy, quick, and fault tolerant sending of emails.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Enable this feature to enable `serde` based deserialization as well
# system-wide configuration support.
config = ["dep:serde", "dep:serde_json", "dep:tokio"]
# Enable this feature to enable support for PGP encryption.
pgp = ["dep:sequoia-cert-store", "dep:sequoia-openpgp"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
sequoia-cert-store = { version = "0.5", default-features = false, optional = true }
sequoia-openpgp = { version = "1.18", default-features = false, features = ["crypto-nettle"], optional = true }
tokio = { version = "1.0", default-features = false, features = ["fs"], optional = true }

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["config", "pgp"]
# Defines the configuration attribute `docsrs`.
rustdoc-args = ["--cfg", "docsrs"]
