[package]
name = "mail-message"
version = "0.1.0"
edition = "2021"
default-run = "mail-message"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "shell-complete"
path = "var/shell-complete.rs"
required-features = ["clap_complete"]

[build-dependencies]
anyhow = "1.0.68"
grev = "0.1.3"

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
clap = { version = "4.1.4", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
clap_complete = { version = "4.1.4", default-features = false, optional = true }
dirs = { version = "5.0", default-features = false }
futures = { version = "0.3", default-features = false, features = ["std"] }
maily = { version = "0.0", path = "../", default-features = false, features = ["pgp"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.0", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt"] }
